--- a/PA 9.vcxproj.filters
+++ b/PA 9.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Minefield.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
