Finishing unfinished functions

--- a/PA 9.vcxproj.filters
+++ b/PA 9.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClCompile Include="Math.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Mine_Tile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
