--- a/PA 9.vcxproj.filters
+++ b/PA 9.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="src\Tile.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Tile_test.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Clue_Tile.cpp">
