--- a/PA 9.vcxproj.filters
+++ b/PA 9.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClCompile Include="src\Minefield.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Tile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
