--- a/PA 9.vcxproj
+++ b/PA 9.vcxproj
@@ -36,16 +36,16 @@
     <ClCompile Include="src\Tile.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\Morbius-Sweeper-Pictures\flag.jpg" />
-    <Image Include="..\Morbius-Sweeper-Pictures\num_mines_eight.jpg" />
-    <Image Include="..\Morbius-Sweeper-Pictures\num_mines_five.jpg" />
-    <Image Include="..\Morbius-Sweeper-Pictures\num_mines_four.jpg" />
-    <Image Include="..\Morbius-Sweeper-Pictures\num_mines_one.jpg" />
-    <Image Include="..\Morbius-Sweeper-Pictures\num_mines_seven.jpg" />
-    <Image Include="..\Morbius-Sweeper-Pictures\num_mines_six.jpg" />
-    <Image Include="..\Morbius-Sweeper-Pictures\num_mines_three.jpg" />
-    <Image Include="..\Morbius-Sweeper-Pictures\num_mines_two.jpg" />
-    <Image Include="..\Morbius-Sweeper-Pictures\tile_hidden.jpg" />
+    <Image Include="resources\flag.jpg" />
+    <Image Include="resources\num_mines_eight.jpg" />
+    <Image Include="resources\num_mines_five.jpg" />
+    <Image Include="resources\num_mines_four.jpg" />
+    <Image Include="resources\num_mines_one.jpg" />
+    <Image Include="resources\num_mines_seven.jpg" />
+    <Image Include="resources\num_mines_six.jpg" />
+    <Image Include="resources\num_mines_three.jpg" />
+    <Image Include="resources\num_mines_two.jpg" />
+    <Image Include="resources\tile_hidden.jpg" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
