--- a/PA 9.vcxproj
+++ b/PA 9.vcxproj
@@ -19,19 +19,19 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="appWrapper.hpp" />
-    <ClInclude Include="hidden_Tile.hpp" />
+    <ClInclude Include="src\appWrapper.hpp" />
     <ClInclude Include="src\Clue_Tile.hpp" />
     <ClInclude Include="src\Header.hpp" />
+    <ClInclude Include="src\hidden_Tile.hpp" />
     <ClInclude Include="src\Math.hpp" />
     <ClInclude Include="src\Minefield.hpp" />
     <ClInclude Include="src\Mine_Tile.hpp" />
     <ClInclude Include="src\Tile.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="appWrapper.cpp" />
-    <ClCompile Include="hidden_Tile.cpp" />
+    <ClCompile Include="src\appWrapper.cpp" />
     <ClCompile Include="src\Clue_Tile.cpp" />
+    <ClCompile Include="src\hidden_Tile.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\Math.cpp" />
     <ClCompile Include="src\Minefield.cpp" />
@@ -134,7 +134,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SFML_STATIC;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\Users\sam\OneDrive\Documents\SFML-2.6.2\include</AdditionalIncludeDirectories>
     </ClCompile>
