--- a/PA 9.vcxproj.filters
+++ b/PA 9.vcxproj.filters
@@ -67,28 +67,28 @@
     <Image Include="resources\flag.jpg">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="resources\num_mines_eight.jpg">
+    <Image Include="resources\num_mines_8.jpg">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="resources\num_mines_five.jpg">
+    <Image Include="resources\num_mines_5.jpg">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="resources\num_mines_four.jpg">
+    <Image Include="resources\num_mines_4.jpg">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="resources\num_mines_one.jpg">
+    <Image Include="resources\num_mines_1.jpg">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="resources\num_mines_seven.jpg">
+    <Image Include="resources\num_mines_7.jpg">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="resources\num_mines_six.jpg">
+    <Image Include="resources\num_mines_6.jpg">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="resources\num_mines_three.jpg">
+    <Image Include="resources\num_mines_3.jpg">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="resources\num_mines_two.jpg">
+    <Image Include="resources\num_mines_2.jpg">
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="resources\tile_hidden.jpg">
